# prax-mobile-android

./: README.md
react-native-expo/: .gitignore  app.json
react-native-expo/modules/penumbra-sdk-module/android/: build.gradle
react-native-expo/modules/penumbra-sdk-module/android/src/main/java/expo/modules/mymodule/: PenumbraSdkModule.kt  _MyModule.kt_
react-native-expo/modules/penumbra-sdk-module/android/src/main/kotlin/uniffi/mobile/: mobile.kt
react-native-expo/modules/penumbra-sdk-module/src/: PenumbraSdkModule.types.ts
uniffi/: Cargo.toml  Cargo.toml.backup  build-android.sh  build-android.sh.backup  generate-android-bindings.sh  generate-bindings.sh  makefile  setup-android-env.sh  setup-build-env.sh
uniffi/.cargo/: config.toml
