[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mobile"
 
[dependencies]
uniffi = { version = "0.28.3", features = [ "cli", "build", "tokio" ] }
libc = "0.2.80"
once_cell = "1.20"
warp = "0.3"
tonic = { version = "0.10.0", features = ["tls", "tls-webpki-roots"] }
tonic-web = "0.10.0"
tokio = { version = "1", features = ["full"] }
penumbra-keys = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-asset = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-app = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-stake = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-shielded-pool = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-num = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-community-pool = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-distributions = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-fee = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-ibc = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sct = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-dex = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-auction = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-governance = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-funding = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-view = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-proto = { tag = "v0.80.5", git = "https://github.com/penumbra-zone/penumbra", features = ["rpc"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
async-std = "1.13.0"
thiserror = "2.0.3"
async-runtime = "0.0.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
tracing-oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]